--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html, body{
-    background-color: #000000;
+    background-color: #00000000;
     font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
