Name12 now New Name

--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,6 @@ ul li{
   -o-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
   transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
+
+#names li#Nicoleta{background-color: rgb(145, 49, 255); }
+#names li#Nicoleta:hover{ background-color: aqua;}
