--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,18 @@ ul li{
 #names li#name6{background-color: rgb(233, 49, 101) }
 #names li#name6:hover{ }
 
+.youngmegasexy{
+  text-align:center;
+  font-size:6.5em;
+  color:#fff;
+  letter-spacing: -7px;
+  font-weight:700;
+  text-transform:uppercase;
+  animation:blur .75s ease-out infinite;
+  text-shadow:0px 0px 5px #fff,
+      0px 0px 7px #fff;
+}
+
 .rainbow {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
