--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ ul li{
 #names li#name2{background-color: rgb(68, 143, 9); }
 #names li#name2:hover{ }
 
-#names li#name3{background-color: rgb(54, 222, 218); }
+#names li#Oliver Barstow{background-color: rgb(54, 222, 218); }
 #names li#name3:hover{ }
 
 #names li#lucia{
