--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,9 @@ ul li{
   transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-#names li#Nicoleta{background-color: rgb(145, 49, 255); }
-#names li#Nicoleta:hover{ background-color: aqua;}
+#names li#Nicoleta{background-color: red;
+                    text-align: center;}
+#names li#Nicoleta:hover{ background-color: yellow;}
 
 #names li#name8{background-color: white; }
 #names li#name8:hover{ 
